CMBSandbox4/src/objects/Transaction_Line_Credit__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>Transaction__r.Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_s_Email__c</fullName>
        <inlineHelpText>This will be populated with a workflow</inlineHelpText>
        <label>Billing Contact&apos;s Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount_Due__c</fullName>
        <formula>Invoice__r.Total_Amount_Due__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Amount Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Billing_Contact_First_Name__c</fullName>
        <formula>Invoice__r.Billing_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Billing Contact - First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <formula>Invoice__r.Invoice_Conga__c</formula>
        <label>Invoice Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <formula>TEXT(Invoice__r.Status__c)</formula>
        <label>Invoice Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Invoice__c.Status__c</field>
                <operation>contains</operation>
                <value>Open - Pending &quot;Send&quot;, Sent</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Transaction Line Credits</relationshipLabel>
        <relationshipName>Transaction_Line_Credits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Override_Workflow_Email_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will override the workflow rule that sends out an email to the client - an email will not go out.</inlineHelpText>
        <label>Override Workflow Email Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transaction</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Transaction Line Credits</relationshipLabel>
        <relationshipName>Transaction_Line_Credits</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Transaction Line Credit</label>
    <nameField>
        <displayFormat>TLC-{0000}</displayFormat>
        <label>Transaction Line Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AMT_EXCEEDS_TRANS_TOTAL_AMT</fullName>
        <active>false</active>
        <errorConditionFormula>Transaction__r.Total_Transaction_Credits__c &gt;   Transaction__r.Total_Amt__c</errorConditionFormula>
        <errorMessage>Amount Exceeds Total Transaction Amount. Please verify the correct amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>INV_DUE_AMT_LESS_THAN_CRED_AMT_PAID</fullName>
        <active>true</active>
        <description>If Credit Transaction Amount Paid is more than Invoice Due amount, give error message: Transaction Amount Exceeds Due Amount</description>
        <errorConditionFormula>AND(
NOT(CONTAINS(Invoice_Status__c ,&quot;Paid&quot;)),
Amount__c &gt;   Invoice__r.Price_Conga__c 
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Transaction Amount Exceeds Invoice Due Amount</errorMessage>
    </validationRules>
</CustomObject>